--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,13 @@
 @import './typography';
 @import './variables';
+@import './_layout';
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
 
 body {
-  
+  max-width: 100%;
+  max-height: 100%;
 }
