--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,9 +5,11 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
-body {
-  max-width: 100%;
-  max-height: 100%;
+body,html {
+    margin: 0;
+    padding: 0;
+    height:100%;
 }
