--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -4,6 +4,7 @@
 
 #app {
     font-family: 'Work Sans', sans-serif;
+    line-height:  1.8;
 }
 
 h1, h2, h3, .pt, .menu-list {
@@ -13,7 +14,10 @@ h1, h2, h3, .pt, .menu-list {
 
 .title{
     font-size: 40px;
-    margin: 50px 0 0;
+}
+
+.text {
+    font-size: 14px;
 }
 
 // p {
