Home/orderstatus updated

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,9 +1,10 @@
 /* COLORS */
 
-$green: #38846D;
-$pink: #F3E4E1;
-$orange: #E5674E;
-$brown: #2F2926;
+$green: #38846d;
+$pink: #f3e4e1;
+$orange: #e5674e;
+$brown: #2f2926;
 $darkbrown: rgb(20, 18, 16);
 $light-brown: #81726c;
-
+$white: white;
+$black: black;
