--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -7,7 +7,7 @@
     line-height:  1.8;
 }
 
-h1, h2, h3, .pt, .menu-list {
+h1, h2, h3, .pt, .menu-list, button {
     font-family: 'PT Serif', serif;
     font-weight: 600;
 }
