added History.vue (html,css)

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,3 +8,5 @@ $darkbrown: rgb(20, 18, 16);
 $light-brown: #81726c;
 $white: white;
 $black: black;
+$gray:rgba(255, 255, 255, 0.8);
+$darkgray:rgba(255, 255, 255, 0.8);
