changed variable name in _variables.scss

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,7 @@ $pink: #f3e4e1;
 $orange: #e5674e;
 $brown: #2f2926;
 $darkbrown: rgb(20, 18, 16);
-$light-brown: #81726c;
+$lightbrown: #81726c;
 $white: white;
 $black: black;
 $gray:rgba(255, 255, 255, 0.8);
